[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SITH"
version = "0.0.1"
authors = [{name = "Mikaela Farrugia", email="mfarrugi@nd.edu"},
]
maintainers = [{name = "Mikaela Farrugia", email="mfarrugi@nd.edu"}]
description = "Analysis package for molecular stress energy distribution"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"

dependencies = [
    "numpy>=1.13.3"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNU General Public License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://https://github.com/hits-mbm-dev/SITH"
"Bug Tracker" = "https://https://github.com/hits-mbm-dev/SITH/issues"

[tool.hatch.build]
ignore-vcs = true
include = [
    "src/SITH/*.py",
    "/tests",
]
exclude = [
    "/tests/*.txt",
]