[metadata]
name = SITH
version = 0.0.6
license = MIT
description = Subdivision of Internal Tension via Hessian
long_description = file: README.md
author = Hits_mbm
author_email = mikaela.farrugia@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License (GPL)
        Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    ase=3.22.1
    numpy=1.22.3
    ipywidgets=7.6.5
    matplotlib=3.3.4

python_requires = >= 3.9

[options.packages.find]
where=src
