[metadata]
name = SITH
version = 0.0.11
license = MIT
description = Stress Induced Traversal of Hessian
long_description = file: README.md
author = Hits_mbm
author_email = mikaela.farrugia@h-its.org
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: GNU General Public License (GPL)
        Operating System :: OS Independent

[options]
packages = 
    SITH
package_dir =
    =src
include_package_data = True
install_requires =
    ase
    numpy
    ipywidgets
    matplotlib

python_requires = >= 3.9

[options.packages.find]
where=src
